--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* z-index: 100; */
+
   background-color: #0f52ba;
   box-shadow: 7px 7px 10px #888888;
 }
@@ -31,9 +31,8 @@ body {
   color: #000a26;
   text-decoration: none;
   font-weight: 600;
-  /* font-family: goldage; */
 }
-.navbar a {
+nav a {
   font-size: 18px;
   color: #000a26;
   text-decoration: none;
@@ -41,15 +40,44 @@ body {
   margin-left: 35px;
   transition: 0.4s;
 }
-.navbar a:hover,
-.navbar a.active {
+nav a:hover {
+  color: #a6c6d8;
+}
+nav a.active {
   color: #a6c6d8;
 }
 #menu-icon {
   font-size: 50px;
   color: #000a26;
   cursor: pointer;
-  /* display: none; */
+  display: none;
+}
+/* STYLING THE TOGGLE MENU  */
+@media (max-width: 768px) {
+  #menu-icon {
+    display: block;
+  }
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: -100%;
+    width: 100%;
+    padding: 1rem 4%;
+    background-color: #0f52ba;
+    box-shadow: 0px 0px 0px #ffffff4b, 5px 5px 7px #5e6879d8;
+
+    transition: 0.25s ease;
+    transition-delay: 0.25s;
+  }
+  .navbar.active {
+    transition-delay: 0s;
+    left: 0;
+  }
+  .navbar a {
+    display: block;
+    font-size: 1.5rem;
+    margin: 2rem 0;
+  }
 }
 section {
   min-height: 100vh;
@@ -72,8 +100,6 @@ section {
   margin-bottom: 10px;
 
   transition: all 0.7s ease-in-out;
-  /* background: linear-gradient(to right, blue, red); */
-  /* filter: blur(1px); */
 }
 .home-content h3 {
   font-size: 32px;
@@ -84,6 +110,7 @@ section {
   color: #222;
   font-size: 1.3rem;
 }
+/* STYLING THE BUTTONS */
 .btn-box {
   display: flex;
   justify-content: center;
@@ -119,6 +146,7 @@ section {
 }
 /* ABOUT PAGE STYLING */
 .about-page {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -138,7 +166,6 @@ section {
   text-align: center;
 }
 .about-img {
-  /* position: relative; */
   width: 15rem;
   height: 15rem;
   display: flex;
@@ -150,12 +177,9 @@ section {
   width: 15rem;
   height: 15rem;
 
-  /* border: 0.3rem solid #0f52ba; */
   background-color: #97b6c9;
   border-radius: 50%;
   box-shadow: -5px -5px 9px #ffffffc0, 5px 5px 7px #5e6879;
-  /* ox-shadow: 3px 3px 50px #000a26;b */
-  /* margin: auto; */
 }
 
 .about-page h1 {
@@ -179,14 +203,14 @@ section {
 }
 .skills-content {
   width: 100%;
-  /* min-height: 100vh; */
+
   display: flex;
 
   align-items: center;
-  /* align-content: flex-start; */
+
   justify-content: center;
   flex-wrap: wrap;
-  /* border: 0.5rem solid red; */
+
   gap: 30px;
   padding: 30px 0;
 }
@@ -213,11 +237,10 @@ section {
   align-content: center;
   flex-direction: column;
   width: 300px;
-  /* border: 0.3rem solid #000a26; */
+
   border-radius: 20px;
   box-shadow: -5px -5px 9px #ffffff78, 5px 5px 7px #5e687949;
   height: auto;
-  /* padding-right: 2rem; */
 }
 
 .skills-content:hover > :not(:hover) {
@@ -225,7 +248,6 @@ section {
   opacity: 0.5;
 }
 .skill-name {
-  /* width:auto */
   height: fit-content;
   align-items: center;
   text-align: center;
@@ -241,7 +263,7 @@ section {
   background-color: #97b6c9;
   box-shadow: 5px 5px 10px #888888;
   font-size: 100px;
-  /* text-align: center; */
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -280,6 +302,7 @@ section {
 }
 /* CONTACT PAGE DESIGN */
 .contact-page {
+  width: 100%;
   padding-top: 100px;
 
   background-color: #97b6c9;
@@ -294,21 +317,18 @@ section {
 .contact-content {
   width: 90%;
   max-width: 500px;
-  /* height: auto; */
+
   display: flex;
 
   align-items: center;
-  /* align-content: center; */
-  /* align-content: flex-start; */
-  /* justify-content: center; */
+
   flex-direction: column;
-  /* flex-wrap: wrap; */
+
   border-radius: 20px;
   box-shadow: -5px -5px 9px #ffffff78, 5px 5px 7px #5e687949;
   gap: 20px;
   padding: 30px;
   margin: auto;
-  /* background-color: red; */
 }
 .contact-content h2 {
   font-weight: 600;
@@ -349,17 +369,13 @@ section {
   padding-top: 15px;
   border-radius: 20px;
 }
-/* .contact-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-} */
+
+/* PAGES'S HEADING STYLING */
 .highlight {
   color: #000a26;
-  /* text-shadow: 10px 10px 20px #0f52ba; */
   text-shadow: -5px -5px 9px #ffffffab, 5px 5px 7px #5e6879a6;
 }
+/* SOME TEXT ANIMATIONS */
 @keyframes typing {
   0%,
   100% {
@@ -398,4 +414,40 @@ section {
   font-size: 24px;
   font-weight: bold;
   animation: fadeIn 4s ease-in-out infinite;
+}
+/* FOOTER STYLING */
+footer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  padding: 30px;
+  background-color: #4e88df;
+}
+.copyright {
+  font-size: 15px;
+  color: #000a26;
+  font-weight: bold;
+}
+.return-btn a {
+  text-decoration: none;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  font-size: 50px;
+  border: blue;
+  color: #0f52ba;
+  background-color: #000a26;
+  border-radius: 50px;
+  cursor: pointer;
+  box-shadow: -5px -5px 9px #ffffff27, 5px 5px 7px #5e687938;
+}
+.return-btn a:hover {
+  background-color: #0f52ba;
+  color: #000a26;
 }
